[gd_scene load_steps=3 format=3 uid="uid://t2j8jfnhig4q"]

[ext_resource type="Script" uid="uid://bnrqwhaitt15n" path="res://scenes/ui_prefabs/visualiser/visualiser.gd" id="1_3sebl"]
[ext_resource type="Material" uid="uid://om0in7t8ptot" path="res://resources/materials/shader_materials/visualiser_material.tres" id="1_vj6cp"]

[node name="Visualiser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3sebl")
fg_color = Color(0.529412, 0, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VisualiserRect" type="ColorRect" parent="VBoxContainer"]
unique_name_in_owner = true
material = ExtResource("1_vj6cp")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="BucketCountSlider" type="HSlider" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1000.0

[node name="BucketCountLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Bucket Count: xxxx"

[node name="HeightScaleSlider" type="HSlider" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 30.0
step = 0.01

[node name="HeightScaleLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Amplitude Zoom: xxx%"

[node name="MinDBSlider" type="HSlider" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.5

[node name="MinDBLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Min Db: xx"

[node name="MaxFSlider" type="HSlider" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10000.0
value = 1.0
exp_edit = true

[node name="MaxFLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Max Frequency: xxxxxx"
